--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,9 +12,23 @@ header {
     margin: 0;
 }
 
-/* ------------------------------------- Heading */
+.ui-menu-color-home {
+    background-color: #e67e22;
+}
 
-/* Name and title */
+.ui-menu-color-resume {
+    background-color: #9b59b6;
+}
+
+.ui-menu-color-contact {
+    background-color: #3498db;
+}
+
+.ui-menu-color-download {
+    background-color: #525252;
+}
+
+/* ------------------------------------- Heading */
 
 .heading {
     margin-left: 50px;
@@ -48,4 +62,21 @@ header {
     margin-top: 20px;
     margin-bottom: 90px;
     color: #fff;
+}
+
+/* Removed margin between nav items found using developer tools */
+
+.list-inline-item:not(:last-child) {
+    margin: 0;
+}
+
+/* closes gaps written in html */
+
+.menucontainer {
+    font-size: 0;
+}
+
+#nav li {
+    font-size: 14px;
+    padding: 0;
 }
