--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,54 @@ header {
     font-size: 0;
 }
 
+#nav {
+    margin: 0;
+}
+
 #nav li {
     font-size: 14px;
     padding: 0;
+}
+
+.menuitem {
+    height: 120px;
+    text-align: center;
+    padding: 0;
+}
+
+/* Targets child element of menuitem */
+.menuitem a {
+    width: 100%;
+    text-decoration: none;
+    color: #fff;
+    height: 120px;
+}
+
+/* targets child element of a */
+.menuitem a i {
+    padding-top: 22px;
+/* display 'block' keeps icons on own line */
+    display: block;
+    color: #fafafa;
+    font-size: 26px;
+}
+
+.menuitem span {
+    display: block;
+    width: 100%;
+    padding-top: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
+
+/* ------------------------------------- Hover */
+
+/* before pseudo class as it's automatically set, viewed on dev tools */
+
+.hvr-sweep-to-bottom::before {
+    background-color: rgb(0, 0, 0, 0.2);
+    height: 120px;
 }
