Footer headings added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,26 @@ header {
     background-color: #525252;
 }
 
+/* -------------- Special paddings/margins/texts */
+
+h1,h2,h3,h4 {
+    margin: 0;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.general-sub {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    color: #fafafa;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
 /* ------------------------------------- Heading */
 
 .heading {
@@ -126,4 +146,12 @@ header {
 .hvr-sweep-to-bottom::before {
     background-color: rgb(0, 0, 0, 0.2);
     height: 120px;
+}
+
+/* ------------------------------------- Footer */
+
+footer {
+    background-color: #525252;
+    color: #fafafa;
+    min-height: 120px;
 }
