--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,3 +155,22 @@ footer {
     color: #fafafa;
     min-height: 120px;
 }
+
+/* Style download icon */
+
+.cv-pdf i {
+    font-size: 18px;
+    color: #fafafa;
+    text-align: center;
+    padding-left: 5px;
+/* Hover should always be in the parent element */
+    transition: all 0.35s ease-in-out;
+ /* Ensure image works on all browsers */
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.cv-pdf i:hover {
+    color: #e84610;
+}
