Footer added and icons styled

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,3 +174,34 @@ footer {
 .cv-pdf i:hover {
     color: #e84610;
 }
+
+/* Style social media links */
+
+.social-links {
+    padding: 15px;
+}
+
+.social-links li a i {
+    width: 32px;
+    height: 32px;
+    padding: 12px 0;
+/* border radius set to 50%, when height and width match, you get a circle */
+    border-radius: 50%;
+    font-size: 13px;
+    line-height: 7px;
+    text-align: center;
+    color: #fafafa;
+    background: #8f8f8f;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.social-links li a i:hover {
+    background: #e84610;
+}
+
+#footer-details {
+    padding: 20px;
+}
