--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@
     background-color: #676767;
 }
 
+.bg-color-three-reasons {
+    background-color: #fff;
+}
+
 header {
     margin: 0;
 }
@@ -46,6 +50,25 @@ h1,h2,h3,h4 {
 
 .inline-block {
     display: inline-block;
+}
+
+.row-table {
+    display: table;
+}
+
+/* display table cell as it's written as section-column in HTML */
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;   
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
 }
 
 /* ------------------------------------- Heading */
