--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,7 +166,7 @@ h1,h2,h3,h4 {
 
 /* before pseudo class as it's automatically set, viewed on dev tools */
 
-.hvr-sweep-to-bottom::before {
+.hvr-sweep-to-bottom:before {
     background-color: rgb(0, 0, 0, 0.2);
     height: 120px;
 }
