--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@
     background-color: #fff;
 }
 
+.bg-color-personal-info {
+    background-color: #f4f4f4;
+}
+
 header {
     margin: 0;
 }
@@ -227,4 +231,15 @@ footer {
 
 #footer-details {
     padding: 20px;
+}
+
+/* ------------------------------------- Three reasons */
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
 }
