--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ h1,h2,h3,h4 {
 }
 
 .logo {
-    background: url(../images/rosie.jpg);
+    background: url(../images/15B791CB-C763-4F6C-806D-E468AB1544EE.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -242,4 +242,39 @@ footer {
 
 .three-reasons-heading {
     margin-bottom: 15px;
+}
+
+/* ------------------------------------- Personal Info */
+
+.personal-info-item {
+    margin-bottom: 20px;
+    display: block;
+    clear: both;
+}
+
+.personal-info-item .key,
+.personal-info-item .value {
+    padding-right: 8px;
+    display: inline-block;
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p {
+    margin: 0;
+}
+
+.personal-info-item .key {
+    width: 30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+}
+
+.personal-info-item .key p {
+    font-weight: 700;
+}
+
+.personal-info-item .value {
+    position: relative;
+    width: 60%;
 }
